--- a/Prevu.Synoptics.V4659_Steinbais/L0/Details/L0_D354.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L0/Details/L0_D354.xaml
@@ -13,24 +13,12 @@
         <Labels:Pipe Width="291" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="L0+370-01-MA1" HorizontalAlignment="Center" Canvas.Left="45" Canvas.Top="177" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Vapor" Width="86" StatusComponent="L0+354-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" Canvas.Left="89" Canvas.Top="148" VerticalAlignment="Top"/>
-        <Rectangle Height="2" Stroke="Black" Width="63" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" Canvas.Left="189" Canvas.Top="85" VerticalAlignment="Top">
-            <d:Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1" ScaleY="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </d:Rectangle.RenderTransform>
-        </Rectangle>
+        <Rectangle Height="2" Stroke="Black" Width="63" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" Canvas.Left="189" Canvas.Top="85" VerticalAlignment="Top"/>
         <Rectangle Height="2" Stroke="Black" Width="54" HorizontalAlignment="Center" Canvas.Left="197" Canvas.Top="214" VerticalAlignment="Top"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" HorizontalAlignment="Center" Canvas.Left="183" Canvas.Top="208" VerticalAlignment="Top"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" HorizontalAlignment="Center" Canvas.Left="183" Canvas.Top="79" VerticalAlignment="Top"/>
@@ -38,19 +26,13 @@
             <Machines:V01_CV_Valve_wColor.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_CV_Valve_wColor.RenderTransform>
         </Machines:V01_CV_Valve_wColor>
         <Machines:V01_EXC_HeatExchanger Canvas.Left="166" Canvas.Top="115" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:V01_EXC_HeatExchanger.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="-90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_EXC_HeatExchanger.RenderTransform>
         </Machines:V01_EXC_HeatExchanger>
