--- a/Prevu.Synoptics.V4659_Steinbais/L0/Pages/L0_P508.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L0/Pages/L0_P508.xaml
@@ -9,33 +9,24 @@
              x:Class="Prevu.Synoptics.L0_P508" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe Width="60" Color="Water" StatusComponent="L0+508-22-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="422" Canvas.Top="477" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="106" Color="Water" StatusComponent="L2+420-71-ECS1" RenderTransformOrigin="0.5,0.5" Canvas.Left="399" Canvas.Top="453" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="60" Color="Water" StatusComponent="L0+508-22-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="422" Canvas.Top="561" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+446-01-MA1" Canvas.Left="1168" Canvas.Top="515" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" VisibilityComponent="L2+447-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -43,30 +34,21 @@
         <Labels:Pipe Width="90" StatusComponent="L0+997-25-CV1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L0+997-25-CV1" VisibilitySignal="LS1" Canvas.Left="1103" Canvas.Top="631" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="92" StatusComponent="L0+997-25-CV1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="L0+997-25-CV1" VisibilitySignal="LS2" Canvas.Left="1237" Canvas.Top="636" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="144" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+446-01-MA1" Canvas.Left="1149" Canvas.Top="471" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L1+447-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -74,10 +56,7 @@
         <Labels:Pipe Width="48" StatusComponent="L0+421-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="581" Canvas.Top="293" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -85,10 +64,7 @@
         <Labels:Pipe Width="68" StatusComponent="L2+420-23-CV1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="389" Canvas.Top="229" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L2+420-23-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -96,20 +72,14 @@
         <Labels:Pipe Width="146" StatusComponent="L1+420-23-CV1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="394" Canvas.Top="191" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L1+420-23-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="48" StatusComponent="L0+423-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1027" Canvas.Top="247" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -117,10 +87,7 @@
         <Labels:Pipe Width="68" StatusComponent="L2+440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="835" Canvas.Top="183" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -128,30 +95,21 @@
         <Labels:Pipe Width="146" StatusComponent="L1+440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="840" Canvas.Top="145" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="48" StatusComponent="L0+425-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1212" Canvas.Top="300" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="60" Color="Water" StatusComponent="L0+508-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="494" Canvas.Top="561" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -161,22 +119,17 @@
         <Labels:Pipe Width="244" Color="Water" StatusComponent="L0+508-01-MA1" Canvas.Left="163" Canvas.Top="584" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="131" Color="Water" StatusComponent="L0+508-01-MA1" Canvas.Left="156" Canvas.Top="463" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="145" Color="Water" StatusComponent="L0+508-01-MA1" VisibilityComponent="" Canvas.Left="142" Canvas.Top="543" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="82" Color="Water" StatusComponent="L2+420-71-ECS1" Canvas.Left="372" Canvas.Top="402" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:CV_Valve_001 Color="Water" RenderTransformOrigin="0.5,0.5" Height="54" Width="58" Canvas.Left="496" Canvas.Top="487" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="270"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
@@ -184,9 +137,6 @@
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
@@ -198,6 +148,14 @@
         <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="1036" Canvas.Top="265" Height="20" Width="212" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_BBF_DoubleBag Canvas.Left="1073" Canvas.Top="643" Height="166" Width="286" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1133" Canvas.Top="522" Height="94" Width="164" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:CV_Valve_001 RenderTransformOrigin="0.5,0.5" Height="54" Width="58" Canvas.Left="424" Canvas.Top="487" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="270"/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Labels:JumpLabel JumpFromLabel="L0+508-22-CV1" JumpToLabel="L2+320-41-LT1" Canvas.Left="301" Canvas.Top="369" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="L0+423-01-MA1" JumpToLabel="L1+440-01-MA1" Canvas.Left="783" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="L0+508-01-MA1" JumpToLabel="L2+440-01-MA1" Canvas.Left="76" Canvas.Top="592" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="L0+508-01-MA1" JumpToLabel="L1+440-01-MA1" Canvas.Left="76" Canvas.Top="431" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
@@ -217,16 +175,6 @@
         <Labels:DeviceLabel ComponentName="L0+425-01-MA1" Canvas.Left="1180" Canvas.Top="198" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L0+997-25-CV1" Canvas.Left="1171" Canvas.Top="589" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L0+997-SHAKE" Canvas.Left="1169" Canvas.Top="726" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:CV_Valve_001 RenderTransformOrigin="0.5,0.5" Height="54" Width="58" Canvas.Left="424" Canvas.Top="487" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="270"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
         <Labels:DeviceLabel ComponentName="L0+508-22-CV1" Canvas.Left="332" Canvas.Top="494" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
