--- a/Prevu.Synoptics.V4659_Steinbais/PlantView.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/PlantView.xaml
@@ -17,24 +17,12 @@
         <Labels:Pipe Canvas.Left="216" Canvas.Top="140" Width="118" PipeHeight="Medium" StatusComponent="018-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Machines:QX_HMI Height="66" Width="56" Canvas.Left="413" Canvas.Top="261" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="75" Canvas.Left="30" Canvas.Top="361" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Machines:QX_LongElectricalCabinet.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:QX_LongElectricalCabinet.RenderTransform>
-        </Machines:QX_LongElectricalCabinet>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="75" Canvas.Left="316" Canvas.Top="367" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:QX_ShortElectricalCabinet Width="54" Height="64" Canvas.Left="766" Canvas.Top="277" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:QX_HMI Height="66" Width="56" Canvas.Left="539" Canvas.Top="269" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:QX_HMI Height="66" Width="56" Canvas.Left="647" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -50,10 +38,7 @@
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="208" Canvas.Left="-68" Canvas.Top="144" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
