--- a/Prevu.Synoptics.V4659_Steinbais/L0/Details/L0_D371.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L0/Details/L0_D371.xaml
@@ -16,55 +16,34 @@
         <Labels:Pipe Color="Water" Width="141" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+371-21-CV3" HorizontalAlignment="Center" Canvas.Left="177" Canvas.Top="198" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="64" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+371-21-CV3" HorizontalAlignment="Center" Canvas.Left="172" Canvas.Top="372" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="52" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+371-21-CV2" HorizontalAlignment="Left" Canvas.Left="178" Canvas.Top="207" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="136" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+371-21-CV1" HorizontalAlignment="Center" Canvas.Left="157" Canvas.Top="163" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="72" RenderTransformOrigin="0.5,0.5" Color="Chemicals" StatusComponent="L0+371-21-CV1" HorizontalAlignment="Center" Canvas.Left="155" Canvas.Top="97" VerticalAlignment="Top"/>
         <Labels:Pipe Width="60" RenderTransformOrigin="0.5,0.5" Color="Chemicals" StatusComponent="L0+371-21-CV2" HorizontalAlignment="Center" Canvas.Left="146" Canvas.Top="183" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+371-21-CV3" Canvas.Left="245" Canvas.Top="129" HorizontalAlignment="Left" VerticalAlignment="Center" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+371-21-CV3" Canvas.Left="245" Canvas.Top="129" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Machines:V01_CV_Valve_wColor Canvas.Left="308" Color="Water" Height="50" Width="50" Canvas.Top="107" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_ACS_Chemical_Dosing Canvas.Left="133" Canvas.Top="229" Height="130" Width="144" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_WaterPump Canvas.Left="140" Canvas.Top="78" Height="44" Width="44" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Chemicals"/>
