V4126: Terminata prima revisione

--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P100.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P100.xaml
@@ -98,7 +98,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="111" StatusComponent="110-22-CV1" Canvas.Left="329" Canvas.Top="633" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Vapor" Width="111" StatusComponent="110-22-CV1" Canvas.Left="329" Canvas.Top="633" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="281" StatusComponent="098-01-MA1" PipeHeight="Medium" Canvas.Left="264" Canvas.Top="185" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="336" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="144" Canvas.Top="761"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="284" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="628" Canvas.Top="744"/>
@@ -177,7 +177,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="456" StatusComponent="100-01-MA1" PipeHeight="Medium" Canvas.Left="709" Canvas.Top="234" RenderTransformOrigin="0.5,0.5"/>
         <Labels:Pipe Width="386" Color="Water" Canvas.Left="144" Canvas.Top="237" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="113-01-MA1"/>
-        <Labels:Pipe Color="Water" Width="46" RenderTransformOrigin="0.5,0.5" StatusComponent="110-22-CV1" Canvas.Left="415" Canvas.Top="654" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Vapor" Width="46" RenderTransformOrigin="0.5,0.5" StatusComponent="110-22-CV1" Canvas.Left="415" Canvas.Top="654" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -229,7 +229,7 @@
                 </TransformGroup>
             </Machines:V01_CV_Valve_wColor.RenderTransform>
         </Machines:V01_CV_Valve_wColor>
-        <Machines:V01_CV_Valve_wColor Canvas.Left="286" Canvas.Top="621" Height="29" Width="56" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:V01_CV_Valve_wColor Canvas.Left="286" Canvas.Top="621" Height="29" Width="56" Color="Steam" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:V01_CV_Valve_wColor.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
