V4978: Fix on Tubes

--- a/Prevu.Synoptics.V4978_CEDO/Pages/P469.xaml
+++ b/Prevu.Synoptics.V4978_CEDO/Pages/P469.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P469" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Color="Water" Width="132" RenderTransformOrigin="0.5,0.5" StatusComponent="475-01-MA1" Canvas.Left="801" Canvas.Top="665" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="132" RenderTransformOrigin="0.5,0.5" StatusComponent="469-03-MA1" Canvas.Left="801" Canvas.Top="665" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -276,9 +276,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="1150" Canvas.Top="288" HorizontalAlignment="Left" VerticalAlignment="Center" InverseStatus="True"/>
-        <Labels:Pipe Color="Water" Width="55" RenderTransformOrigin="0.5,0.5" Canvas.Left="1147" Canvas.Top="320" HorizontalAlignment="Left" VerticalAlignment="Center" InverseStatus="True"/>
-        <Labels:Pipe Color="Water" Width="36" RenderTransformOrigin="0.5,0.5" Canvas.Left="1182" Canvas.Top="304" HorizontalAlignment="Left" VerticalAlignment="Center" InverseStatus="True">
+        <Labels:Pipe Color="Water" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="1150" Canvas.Top="288" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="465-21-CV1"/>
+        <Labels:Pipe Color="Water" Width="55" RenderTransformOrigin="0.5,0.5" Canvas.Left="1147" Canvas.Top="320" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="465-21-CV1"/>
+        <Labels:Pipe Color="Water" Width="36" RenderTransformOrigin="0.5,0.5" Canvas.Left="1182" Canvas.Top="304" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="465-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -391,7 +391,7 @@
         <Labels:DeviceLabel ComponentName="465-01-MA1" Canvas.Left="849" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="465-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1091" Canvas.Top="220" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="465-MICROFILT" Canvas.Left="945" Canvas.Top="161" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="465-44-FT1" Canvas.Left="1204" Canvas.Top="220" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="465-44-FT1" Canvas.Left="1204" Canvas.Top="220" HorizontalAlignment="Center" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="469-03-MA1" Canvas.Left="893" Canvas.Top="522" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="469-23-CV1" Canvas.Left="527" Canvas.Top="758" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="469-05-MA1" Canvas.Left="738" Canvas.Top="629" HorizontalAlignment="Left" VerticalAlignment="Top"/>
