--- a/Prevu.Synoptics.V4978_CEDO/Pages/P480.xaml
+++ b/Prevu.Synoptics.V4978_CEDO/Pages/P480.xaml
@@ -13,7 +13,7 @@
         <Labels:Pipe Width="107" StatusComponent="371-22-CV1" Canvas.Left="397" Canvas.Top="331" Color="Chemicals" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="429" RenderTransformOrigin="0.5,0.5" StatusComponent="480-03-MA1" Canvas.Left="60" Canvas.Top="461" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="90" Color="Water" StatusComponent="487-01-MA1" Canvas.Left="454" Canvas.Top="735" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="194" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="470-01-MA1" Canvas.Left="616" Canvas.Top="161" VisibilityComponent="470-25-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="194" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="469-01-MA1" Canvas.Left="616" Canvas.Top="161" VisibilityComponent="480-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="168" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="469-02-MA1" Canvas.Left="1135" Canvas.Top="435" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="484-21-CV1" Canvas.Left="923" Canvas.Top="489" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -132,7 +132,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="166" RenderTransformOrigin="0.5,0.5" StatusComponent="451-71-ECS2" PipeHeight="Medium"  Canvas.Left="687" Canvas.Top="358" VisibilityComponent="451-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="166" RenderTransformOrigin="0.5,0.5" StatusComponent="480-02-MA1" PipeHeight="Medium"  Canvas.Left="687" Canvas.Top="358" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -152,7 +152,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="106" RenderTransformOrigin="0.5,0.5" StatusComponent="451-71-ECS2" PipeHeight="Medium"  Canvas.Left="669" Canvas.Top="279" VisibilityComponent="451-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="106" RenderTransformOrigin="0.5,0.5" StatusComponent="480-02-MA1" PipeHeight="Medium"  Canvas.Left="669" Canvas.Top="279" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="256" RenderTransformOrigin="0.5,0.5" StatusComponent="486-01-MA1" PipeHeight="Medium"  Canvas.Left="1212" Canvas.Top="720" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="200" RenderTransformOrigin="0.5,0.5" StatusComponent="481-01-MA1" PipeHeight="Medium"  Canvas.Left="804" Canvas.Top="474" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
@@ -165,7 +165,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="149" RenderTransformOrigin="0.5,0.5" StatusComponent="484-01-MA1" PipeHeight="Medium"  Canvas.Left="1040" Canvas.Top="720" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="112" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="460-21-CV1" Canvas.Left="562" Canvas.Top="215" VisibilityComponent="470-25-CV1" VisibilitySignal="LS2" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="112" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="469-01-MA1" Canvas.Left="562" Canvas.Top="215" VisibilityComponent="480-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -175,7 +175,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="243" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="470-01-MA1" Canvas.Left="847" Canvas.Top="161" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="470-25-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Width="243" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="469-01-MA1" Canvas.Left="847" Canvas.Top="161" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="469-25-CV1" VisibilitySignal="LS2"/>
         <Labels:Pipe Width="200" RenderTransformOrigin="0.5,0.5" StatusComponent="480-71-ECS2" PipeHeight="Medium"  Canvas.Left="391" Canvas.Top="175" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
