V4659: Added Components Lx+420-24-CV1

--- a/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P430.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P430.xaml
@@ -42,7 +42,7 @@
         <Labels:Pipe Width="147" Color="Water" StatusComponent="L2+450-01-MA1" Canvas.Left="523" Canvas.Top="278" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="277" StatusComponent="L2+328-01-MA1" PipeHeight="Medium" Canvas.Left="405" Canvas.Top="215" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="48" Color="Water" StatusComponent="L2+420-21-CV1" Canvas.Left="598" Canvas.Top="201" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="ByProduct" Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+420-22-CV1" Canvas.Left="605" Canvas.Top="405" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="ByProduct" Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+420-24-CV1" Canvas.Left="605" Canvas.Top="405" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -273,5 +273,7 @@
         <Labels:DeviceLabel ComponentName="L2+328-01-MA1" Canvas.Left="19" Canvas.Top="703" HorizontalAlignment="Center" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="L2+326-01-MA1" Canvas.Left="196" Canvas.Top="674" HorizontalAlignment="Center" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="L2+460-21-CV1" Canvas.Left="1101" Canvas.Top="425" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="557" Canvas.Top="365" Height="22" Width="114" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="L2+420-24-CV1" Canvas.Left="455" Canvas.Top="353" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
