--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P997.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P997.xaml
@@ -8,50 +8,92 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              x:Class="Prevu.Synoptics.P997" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas>
-        <Labels:Pipe Width="106" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="900-71-ECS2" Canvas.Left="1056" Canvas.Top="312" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" PipeHeight="Medium" Canvas.Left="515" Canvas.Top="355">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="185" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="376" Canvas.Top="319"/>
-        <Labels:Pipe Width="90" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="998-25-CV1" VisibilitySignal="LS1" Canvas.Left="444" Canvas.Top="494" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="92" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="998-25-CV1" VisibilitySignal="LS2" Canvas.Left="579" Canvas.Top="499" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:V01_EC_FiltroManiche Canvas.Left="1149" Canvas.Top="295" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_BBF_DoubleBag Canvas.Left="415" Canvas.Top="506" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
-        <Machines:MaterialInletOutlet Canvas.Left="1016" Canvas.Top="281" HorizontalAlignment="Center" VerticalAlignment="Top" Height="67" Width="67"/>
-        <TextBlock TextWrapping="Wrap" Height="66" Width="122" TextAlignment="Center" FontSize="20" Foreground="White" Text="{lex:Loc MACHINES EXHAUST}" Canvas.Left="917" Canvas.Top="288" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="474" Canvas.Top="385" Height="94" Width="164" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
-        <Rectangle Height="139" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="1105" Canvas.Top="227" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1076" Canvas.Top="175" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="997-25-CV1" JumpToLabel="898-01-MA1" Canvas.Left="322" Canvas.Top="289" RenderTransformOrigin="0.5,0.5"/>
-        <Labels:DetailsLabel ComponentName="997-BAGS" DetailsPageName="D997" Canvas.Left="532" Canvas.Top="532" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
-        <Labels:DeviceLabel ComponentName="997-25-CV1" Canvas.Left="512" Canvas.Top="452" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
-        <Labels:DeviceLabel ComponentName="997-SHAKE" Canvas.Left="511" Canvas.Top="589" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
-        <Labels:DeviceLabel ComponentName="900-71-ECS2" Canvas.Left="993" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top" />
-    </Canvas>
+  <Canvas>
+    <Labels:Pipe Width="106" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="900-71-ECS2" Canvas.Left="1056" Canvas.Top="312" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" PipeHeight="Medium" Canvas.Left="515" Canvas.Top="355">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform />
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="185" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="376" Canvas.Top="319"/>
+    <Labels:Pipe Width="90" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-25-CV1" VisibilitySignal="LS1" Canvas.Left="444" Canvas.Top="494" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="92" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-25-CV1" VisibilitySignal="LS2" Canvas.Left="577" Canvas.Top="499" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:V01_EC_FiltroManiche Canvas.Left="1149" Canvas.Top="295" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_BBF_DoubleBag Canvas.Left="413" Canvas.Top="506" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
+    <Machines:MaterialInletOutlet Canvas.Left="1016" Canvas.Top="281" HorizontalAlignment="Center" VerticalAlignment="Top" Height="67" Width="67"/>
+    <TextBlock TextWrapping="Wrap" Height="84" Width="122" TextAlignment="Center" FontSize="20" Foreground="White" Text="{lex:Loc MACHINES EXHAUST}" Canvas.Left="917" Canvas.Top="288" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="474" Canvas.Top="385" Height="94" Width="164" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+    <Rectangle Height="139" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="1105" Canvas.Top="227" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1076" Canvas.Top="175" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="997-25-CV1" JumpToLabel="898-01-MA1" Canvas.Left="322" Canvas.Top="289" RenderTransformOrigin="0.5,0.5"/>
+    <Labels:DetailsLabel ComponentName="997-BAGS" DetailsPageName="D997" Canvas.Left="530" Canvas.Top="564" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
+    <Labels:DeviceLabel ComponentName="997-25-CV1" Canvas.Left="590" Canvas.Top="354" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+    <Labels:DeviceLabel ComponentName="997-SHAKE" Canvas.Left="511" Canvas.Top="454" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+    <Labels:DeviceLabel ComponentName="900-71-ECS2" Canvas.Left="993" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:DeviceLabel ComponentName="997-61-BAG" Canvas.Left="445" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="997-62-BAG" Canvas.Left="577" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-21-CV1" Canvas.Left="461" Canvas.Top="519" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform />
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-21-CV1" Canvas.Left="503" Canvas.Top="519" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform />
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-22-CV1" Canvas.Left="594" Canvas.Top="519" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform />
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-22-CV1" Canvas.Left="636" Canvas.Top="519" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform />
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+  </Canvas>
 </UserControl>
