--- a/Prevu.Synoptics.V4228-RES/Details/D873.xaml
+++ b/Prevu.Synoptics.V4228-RES/Details/D873.xaml
@@ -11,7 +11,7 @@
              x:Class="Prevu.Synoptics.D873">
     <Canvas Height="344" Width="368">
         <Machines:V01_BBF_SingleBag Canvas.Left="10" Canvas.Top="10" Height="320" Width="343" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel ComponentName="873-62-BAG" SignalName="LSH" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="146" Canvas.Top="72"/>
+        <Labels:SignalLabel ComponentName="873-62-BAG" SignalName="LSHA" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="146" Canvas.Top="72"/>
         <Labels:SignalLabel ComponentName="873-62-BAG" SignalName="SEL" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="148" Canvas.Top="214"/>
         <Labels:DeviceLabel ComponentName="873-62-BAG" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="136" Canvas.Top="154"/>
     </Canvas>
