--- a/Prevu.Synoptics.V4228-RES/Details/D997.xaml
+++ b/Prevu.Synoptics.V4228-RES/Details/D997.xaml
@@ -12,9 +12,9 @@
              x:Class="Prevu.Synoptics.D997">
     <Canvas Width="541" Height="350">
         <Machines:V01_BBF_DoubleBag Canvas.Left="10" Canvas.Top="10" Height="330" Width="523" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel ComponentName="997-61-BAG" SignalName="LSH" HorizontalAlignment="Left" VerticalAlignment="Center"  Canvas.Left="115" Canvas.Top="71"/>
+        <Labels:SignalLabel ComponentName="997-61-BAG" SignalName="LSHA" HorizontalAlignment="Left" VerticalAlignment="Center"  Canvas.Left="115" Canvas.Top="71"/>
         <Labels:SignalLabel ComponentName="997-61-BAG" SignalName="SEL" HorizontalAlignment="Center" VerticalAlignment="Center"  Canvas.Left="117" Canvas.Top="205"/>
-        <Labels:SignalLabel ComponentName="997-62-BAG" SignalName="LSH" Canvas.Left="358" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:SignalLabel ComponentName="997-62-BAG" SignalName="LSHA" Canvas.Left="358" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:SignalLabel ComponentName="997-62-BAG" SignalName="SEL" Canvas.Left="360" Canvas.Top="205" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="997-62-BAG" Canvas.Left="348" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="997-61-BAG" HorizontalAlignment="Center" VerticalAlignment="Center"  Canvas.Left="105" Canvas.Top="150"/>
