--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P020.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P020.xaml
@@ -5,8 +5,9 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.P020" mc:Ignorable="d"
-             Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
+             x:Class="Prevu.Synoptics.P020" 
+             mc:Ignorable="d"
+             Height="850.0" Width="1550.0" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
 
         <Labels:Pipe StatusComponent="026-01-MA1" Width="84" PipeHeight="Medium" Canvas.Left="773" Canvas.Top="390" RenderTransformOrigin="0.5,0.5" VisibilityComponent="" HorizontalAlignment="Left" VerticalAlignment="Center"/>
